# Market-Intelligence-AI

./: README.md  pyproject.toml
src/market_intelligence_ai/: crew.py  main.py
src/market_intelligence_ai/config/: agents.yaml  tasks.yaml
