[project]
name = "market_intelligence_ai"
version = "0.1.0"
description = "Market-Intelligence-AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.12.2",
    "crewai[litellm,tools]==1.12.2",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
market_intelligence_ai = "market_intelligence_ai.main:run"
run_crew = "market_intelligence_ai.main:run"
train = "market_intelligence_ai.main:train"
replay = "market_intelligence_ai.main:replay"
test = "market_intelligence_ai.main:test"
run_with_trigger = "market_intelligence_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
